--- a/demo/common.html
+++ b/demo/common.html
@@ -11,6 +11,7 @@
 <script>
   window.demos = [
      {name: 'index', title: 'Basic Examples'},
+     {name: 'validation-feedback', title: 'Validation Feedback'},
      {name: 'styling', title: 'Material Design Theme'}
   ];
 </script>
