--- a/demo/styling.html
+++ b/demo/styling.html
@@ -67,7 +67,7 @@
 
         <vaadin-input label="Required" placeholder="I need a value" required></vaadin-input>
 
-        <vaadin-input label="Invalid" value="Numbers only" pattern="[0-9]+"></vaadin-input>
+        <vaadin-input label="Numbers only" value="Invalid" pattern="[0-9]+" indicate-invalid-on="input" indicate-valid-on="input" invalid></vaadin-input>
 
       </template>
     </demo-snippet>
