--- a/demo/material-vaadin-input.html
+++ b/demo/material-vaadin-input.html
@@ -24,7 +24,7 @@
           font-size: 16px;
           color: inherit;
           background-color: transparent;
-          background-image: linear-gradient(#3F51B5, #3F51B5), linear-gradient(rgba(0, 0, 0, 0.12) 0, transparent 1px);
+          background-image: linear-gradient(#3F51B5, #3F51B5), linear-gradient(rgba(0, 0, 0, 0.12) 1px, transparent 1px);
           background-repeat: no-repeat;
           background-position: 50% 100%;
 
@@ -90,6 +90,19 @@
         --vaadin-input__label: {
           @apply --material-input__label;
           color: #dd2c00;;
+        };
+      }
+
+      vaadin-input[valid] {
+        --vaadin-input__input: {
+          @apply --material-input__input;
+          background-image: linear-gradient(#00cc3f, #00cc3f);
+          background-size: 100% 2px;
+        };
+
+        --vaadin-input__label: {
+          @apply --material-input__label;
+          color: #00cc3f;;
         };
       }
 
