--- a/demo/validation-feedback.html
+++ b/demo/validation-feedback.html
@@ -78,7 +78,7 @@
       </template>
     </demo-snippet>
 
-    <h3>Immediate feedback for both valid and invalid values</h3>
+    <h3>Lazy feedback</h3>
     <p>The validation feedback can also be triggered lazily only when explicitly
       requested, for example when submitting a form.</p>
     <demo-snippet>
