--- a/demo/material-vaadin-text-field.html
+++ b/demo/material-vaadin-text-field.html
@@ -17,9 +17,9 @@
           margin: 0;
           border: 0;
           border-radius: 0;
-          padding: 8px 0 10px;
+          padding: 8px 0;
           width: 100%;
-          height: 16px;
+          height: 32px;
           font-family: Roboto, sans-serif;
           font-size: 16px;
           color: inherit;
