--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -35,11 +35,16 @@ Custom property | Description | Default
       :host {
         display: inline-flex;
         flex-direction: column;
+        align-items: flex-start;
         outline: none;
         -webkit-tap-highlight-color: transparent;
       }
 
       input {
+        flex: 1 1 0;
+        box-sizing: border-box;
+        width: 100%;
+        min-width: 0;
         @apply --vaadin-text-field__input;
       }
 
@@ -60,6 +65,8 @@ Custom property | Description | Default
       }
 
       label {
+        flex: 0 0 var(--vaadin-form-layout-label-basis, auto);
+        margin-right: var(--vaadin-form-layout-label-gap, 0);
         @apply --vaadin-text-field__label;
       }
 
