Rename focused -> focusRing

--- a/demo/material-vaadin-text-field.html
+++ b/demo/material-vaadin-text-field.html
@@ -73,7 +73,7 @@
         };
       }
 
-      vaadin-text-field[focused] {
+      vaadin-text-field[focus-ring] {
         background-size: 100% 2px, 100% 2px;
 
         --vaadin-text-field__label: {
