--- a/demo/styling.html
+++ b/demo/styling.html
@@ -79,7 +79,7 @@
           </style>
         </custom-style>
 
-        <vaadin-text-field label="Focused" value="Value" focused></vaadin-text-field>
+        <vaadin-text-field label="Focus ring" value="Value" focus-ring></vaadin-text-field>
 
         <vaadin-text-field label="Disabled" value="Value" disabled></vaadin-text-field>
 
