--- a/test/visual/default.html
+++ b/test/visual/default.html
@@ -36,7 +36,7 @@
       <p>
       value: <vaadin-text-field value="Go Vaadin"></vaadin-text-field>
       <p>
-      focused: <vaadin-text-field autofocus id="hidden-caret"></vaadin-text-field>
+      autofocus: <vaadin-text-field autofocus id="hidden-caret"></vaadin-text-field>
       <p>
       disabled: <vaadin-text-field disabled></vaadin-text-field>
       <p>
