--- a/test/visual/theming-md.html
+++ b/test/visual/theming-md.html
@@ -30,7 +30,7 @@
     <fieldset id="theming-md-tests">
       <vaadin-text-field label="default input"></vaadin-text-field>
       <vaadin-text-field label="input with value" value="Go Vaadin"></vaadin-text-field>
-      <vaadin-text-field label="focused input" focused></vaadin-text-field>
+      <vaadin-text-field label="input with focus-ring" focus-ring></vaadin-text-field>
       <vaadin-text-field label="disabled input" value="disabled" disabled></vaadin-text-field>
       <vaadin-text-field placeholder="input with placeholder"></vaadin-text-field>
       <vaadin-text-field label="invalid input" required invalid></vaadin-text-field>
