--- a/test/control-state.html
+++ b/test/control-state.html
@@ -71,18 +71,18 @@
         describe('focus', function() {
           it('should focus the internal input on focus', function() {
             focusElement.focus();
-            expect(customElement.focused).to.be.true;
+            expect(customElement.focusRing).to.be.true;
           });
 
           it('should blur the internal input on blur', function() {
             customElement.focus();
             focusElement.blur();
-            expect(customElement.focused).to.be.false;
+            expect(customElement.focusRing).to.be.false;
           });
 
           it('should focus the internal input on host click', function() {
             customElement.click();
-            expect(customElement.focused).to.be.true;
+            expect(customElement.focusRing).to.be.true;
           });
         });
       }
