--- a/test/control-state.html
+++ b/test/control-state.html
@@ -5,7 +5,7 @@
   <title>vaadin-text-field tests</title>
 
   <script src="../../web-component-tester/browser.js"></script>
-
+  <link rel="import" href="../../iron-test-helpers/iron-test-helpers.html">
 </head>
 
 <body>
@@ -86,6 +86,22 @@
           });
         });
       }
+
+      describe('focus-ring', function() {
+        it('should setand unset this._tabPressed', function() {
+          MockInteractions.keyDownOn(document.body, 9);
+          expect(customElement._tabPressed).to.be.true;
+
+          MockInteractions.keyUpOn(document.body, 9);
+          expect(customElement._tabPressed).to.be.false;
+
+          MockInteractions.keyDownOn(document.body, 9, 'shift');
+          expect(customElement._tabPressed).to.be.true;
+
+          MockInteractions.keyUpOn(document.body, 9, 'shift');
+          expect(customElement._tabPressed).to.be.false;
+        });
+      });
 
       describe('disabled', function() {
         beforeEach(function() {
