Remove duplicate autofocus property

--- a/vaadin-control-state-mixin.html
+++ b/vaadin-control-state-mixin.html
@@ -40,7 +40,7 @@
     static get properties() {
       return {
         /**
-         * If true, the element currently has focus.
+         * Specify that this control should have input focus when the page loads.
          */
         autofocus: {
           type: Boolean
