Fix default value to be empty string

--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -233,6 +233,7 @@ This program is available under Apache License Version 2.0, available at https:/
              */
             value: {
               type: String,
+              value: '',
               observer: '_valueChanged',
               notify: true
             },
