--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -113,6 +113,7 @@ This program is available under Apache License Version 2.0, available at https:/
           list="[[list]]"
           maxlength$="[[maxlength]]"
           minlength$="[[minlength]]"
+          name="[[name]]"
           on-blur="validate"
           on-input="_onInput"
           pattern="[[pattern]]"
