Fix styling visual test

--- a/test/visual/styling.html
+++ b/test/visual/styling.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <dom-module id="text-field-styles" theme-for="vaadin-text-field">
+  <dom-module id="vaadin-text-field-styles" theme-for="vaadin-text-field">
     <template>
       <style>
         [part~="label"] {
@@ -22,7 +22,7 @@
         }
 
         [part~="input-field"] {
-          border: 1px solid black;
+          border-style: dashed;
         }
 
         [part~="error-message"] {
