Prototype of the vaadin-password-field

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,14 @@
 
     <demo-navigation></demo-navigation>
 
+    <h3>Input types</h3>
+    <demo-snippet>
+      <template>
+        <p><vaadin-text-field placeholder="text field"></vaadin-text-field>
+        <p><vaadin-password-field placeholder="password field"></vaadin-password-field>
+      </template>
+    </demo-snippet>
+
     <h3>Setting the Value</h3>
     <demo-snippet>
       <template>
