--- a/demo/common.html
+++ b/demo/common.html
@@ -21,6 +21,7 @@
 
 <!-- The component to demo -->
 <link rel="import" href="../vaadin-text-field.html">
+<link rel="import" href="../vaadin-password-field.html">
 
 <script>
    window.addEventListener('WebComponentsReady', () => {
