--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -100,7 +100,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         <slot name="prefix"></slot>
 
-        <input id="input" part="value"
+        <input type="[[_type]]" id="input" part="value"
           autocomplete$="[[autocomplete]]"
           autocorrect$="[[autocorrect]]"
           autofocus$="[[autofocus]]"
@@ -311,6 +311,11 @@ This program is available under Apache License Version 2.0, available at https:/
              */
             preventInvalidInput: {
               type: Boolean
+            },
+
+            _type: {
+              type: String,
+              value: 'text'
             },
 
             _labelId: {
