Implement different eye icons for show and hide password

--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -6,19 +6,26 @@ This program is available under Apache License Version 2.0, available at https:/
 
 <link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="../polymer/lib/mixins/gesture-event-listeners.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="vaadin-text-field.html">
+<link rel="import" href="vaadin-password-field-icons.html">
 
 <dom-module id="vaadin-password-field">
   <template>
     <style>
-      [part="eye-icon"]::before {
-        content: '👁';
-        opacity: .5;
+      [part="eye-icon-show"],
+      [part="eye-icon-hide"] {
         cursor: pointer;
       }
     </style>
 
-    <div id="eyeIcon" part="eye-icon" on-tap="_toggleInputType" title="Show password"></div>
+    <div part="eye-icon-show" id="eyeIconShow" hidden="[[passwordVisible]]" on-tap="_showPassword">
+      <iron-icon icon="vaadin-password-field-icons:eye" title="Show password"></iron-icon>
+    </div>
+
+    <div part="eye-icon-hide" id="eyeIconHide" hidden="[[!passwordVisible]]" on-tap="_hidePassword">
+      <iron-icon icon="vaadin-password-field-icons:eye-slash" title="Hide password"></iron-icon>
+    </template>
   </template>
   <script>
     (function() {
@@ -38,7 +45,8 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * Part name       | Description
        * ----------------|-----------------------------------------------
-       * `eye-icon`      | The eye icon which toggles password visibility
+       * `eye-icon-show` | The eye icon which shows password
+       * `eye-icon-hide` | The crossed out eye icon which hides password
        *
        * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
@@ -52,6 +60,18 @@ This program is available under Apache License Version 2.0, available at https:/
           return 'vaadin-password-field';
         }
 
+        static get properties() {
+          return {
+            /**
+             * True if the password is visible ([type=text]).
+             */
+            passwordVisible: {
+              type: Boolean,
+              value: false,
+              observer: '_passwordVisibleChanged',
+            }
+          };
+        }
         static get template() {
           if (!memoizedTemplate) {
             // Retrieve this element's dom-module template
@@ -60,9 +80,12 @@ This program is available under Apache License Version 2.0, available at https:/
             // Clone the contents of the text-field template
             const textFieldTemplate = document.importNode(Vaadin.TextFieldElement.template.content, true);
 
-            // Insert the text-field contents before the eyeIcon
-            const eyeIcon = memoizedTemplate.content.querySelector('#eyeIcon');
-            textFieldTemplate.querySelector('[part="input-field"]').appendChild(eyeIcon);
+            // Append eye icons to the text-field contents
+            const inputField = textFieldTemplate.querySelector('[part="input-field"]');
+            const eyeIconShow = memoizedTemplate.content.querySelector('[part="eye-icon-show"]');
+            const eyeIconHide = memoizedTemplate.content.querySelector('[part="eye-icon-hide"]');
+            inputField.appendChild(eyeIconShow);
+            inputField.appendChild(eyeIconHide);
             memoizedTemplate.content.appendChild(textFieldTemplate);
           }
 
@@ -71,15 +94,23 @@ This program is available under Apache License Version 2.0, available at https:/
 
         ready() {
           super.ready();
-          this._toggleInputType();
+          this.passwordVisible = false;
         }
 
-        _toggleInputType() {
-          if (this.$.input.type === 'password') {
+        _passwordVisibleChanged(passwordVisible) {
+          if (passwordVisible) {
             this.$.input.type = 'text';
           } else {
             this.$.input.type = 'password';
           }
+        }
+
+        _showPassword() {
+          this.passwordVisible = true;
+        }
+
+        _hidePassword() {
+          this.passwordVisible = false;
         }
       }
 
