--- a/test/password-field.html
+++ b/test/password-field.html
@@ -20,12 +20,12 @@
   <script>
 
     describe('password-field', function() {
-      var passwordField, input, eyeIcon;
+      var passwordField, input, togglePasswordIcon;
 
       beforeEach(function() {
         passwordField = fixture('default');
         input = passwordField.$.input;
-        eyeIcon = passwordField.$.eyeIcon;
+        togglePasswordIcon = passwordField.$.togglePasswordIcon;
       });
 
       describe('native', function() {
@@ -33,10 +33,11 @@
           expect(input.type).to.equal('password');
         });
 
-        it('should toggle type on click on eye-icon', function() {
-          eyeIcon.click();
+        it('should toggle type on click on eye-icons', function() {
+          togglePasswordIcon.click();
           expect(input.type).to.equal('text');
-          eyeIcon.click();
+
+          togglePasswordIcon.click();
           expect(input.type).to.equal('password');
         });
       });
