Implement different eye icons for show and hide password

--- a/test/password-field.html
+++ b/test/password-field.html
@@ -20,12 +20,13 @@
   <script>
 
     describe('password-field', function() {
-      var passwordField, input, eyeIcon;
+      var passwordField, input, eyeIconShow, eyeIconHide;
 
       beforeEach(function() {
         passwordField = fixture('default');
         input = passwordField.$.input;
-        eyeIcon = passwordField.$.eyeIcon;
+        eyeIconShow = passwordField.$.eyeIconShow;
+        eyeIconHide = passwordField.$.eyeIconHide;
       });
 
       describe('native', function() {
@@ -33,11 +34,19 @@
           expect(input.type).to.equal('password');
         });
 
-        it('should toggle type on click on eye-icon', function() {
-          eyeIcon.click();
+        it('should toggle type on click on eye-icons', function() {
+          expect(eyeIconShow.hidden).to.be.false;
+          expect(eyeIconHide.hidden).to.be.true;
+          eyeIconShow.click();
           expect(input.type).to.equal('text');
-          eyeIcon.click();
+
+          expect(eyeIconShow.hidden).to.be.true;
+          expect(eyeIconHide.hidden).to.be.false;
+          eyeIconHide.click();
           expect(input.type).to.equal('password');
+
+          expect(eyeIconShow.hidden).to.be.false;
+          expect(eyeIconHide.hidden).to.be.true;
         });
       });
 
