initial number-field implementation

--- a/demo/common.html
+++ b/demo/common.html
@@ -14,6 +14,7 @@
   window.demos = [
      {name: 'index', title: 'Basic Examples'},
      {name: 'password', title: 'Password Field'},
+     {name: 'number-field', title: 'Number Field'},
      {name: 'validators', title: 'Custom Validators'},
      {name: 'styling', title: 'Styling'}
   ];
@@ -23,6 +24,7 @@
 <!-- The component to demo -->
 <link rel="import" href="../vaadin-text-field.html">
 <link rel="import" href="../vaadin-password-field.html">
+<link rel="import" href="../vaadin-number-field.html">
 
 <script>
    window.addEventListener('WebComponentsReady', () => {
